# SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only
# Copyright (c) 2021 - 2025 Gavin Henry <ghenry@sentrypeer.org>
#
#   _____            _              _____
#  / ____|          | |            |  __ \
# | (___   ___ _ __ | |_ _ __ _   _| |__) |__  ___ _ __
#  \___ \ / _ \ '_ \| __| '__| | | |  ___/ _ \/ _ \ '__|
#  ____) |  __/ | | | |_| |  | |_| | |  |  __/  __/ |
# |_____/ \___|_| |_|\__|_|   \__, |_|   \___|\___|_|
#                              __/ |
#                             |___/
#
[package]
name = "sentrypeer_rust"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
libc = "0.2.177"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
pki-types = { package = "rustls-pki-types", version = "1" }
serde = { version = "1.0.228", features = ["derive"] }
os_socketaddr = "0.2.5"
clap = { version = "4.5.50", features = ["derive", "string"] }
rcgen = "0.14.5"
confy = "1.0.0"
socket2 = "0.5.10"
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"], default-features = false }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
serial_test = "3.2.0"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
bindgen = "0.72.1"
cbindgen = "0.29.0"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = true
